css зміна ширини для мобілок замість js

--- a/src/styles/quasar.sass
+++ b/src/styles/quasar.sass
@@ -1,3 +1,10 @@
 @import './quasar.variables.sass'
 @import '~quasar-styl'
 // @import '~quasar-addon-styl'
+
+.page
+  margin: 0px 0px
+
+@media (min-width: 768px)
+  .page
+    margin: 16px 16px
